--- a/trunk/LaTeX/Statuseminar - NIX PILLE/indhold/design/Specificationrequirement.tex
+++ b/trunk/LaTeX/Statuseminar - NIX PILLE/indhold/design/Specificationrequirement.tex
@@ -11,14 +11,14 @@ The program will need a function to help the user see where the items are placed
 The program will also have to check that the suitcases are below the limits set for weight and size.
 
 
-There are some features that not are essential for the program to work but will improve the program. One of these features is to handle changeable shape of items e.g. a T-shirt or other forms of clothing. This makes the program able to pack more efficient. This mean that to program can handle like solid, liquid and bendable shapes. But this may not be in the program at the start since this will be hard to develop and implement.
+There are some features that not are essential for the program to work but will improve the program. One of these features is to handle changeable shape of items e.g. a T-shirt or other forms of clothing. This makes the program able to pack more efficient. This means that to program can handle like solid, liquid and bendable shapes. But this may not be in the program at the start since this will be hard to develop and implement.
 To better help packing and planing ahead the program needs a list of different trip types that can help the user with packing the luggage for a given type of trip.
 Another nice feature to have is to save space for possible souvenirs the user might buys on the trip. These features means that the user does not need to check if there is room for the souvenirs before buying it.
 
 \subsection{Targeted Features}
 These are the essential features that the program will have.\newline
 
-\textbf{program language is C\#}:
+\textbf{Program language is C\#}:
 The program need to written in C\# since the requirements for this project is that the program need to written in C\#.
 
 \textbf{Guide the user}:
@@ -26,7 +26,7 @@ The program will have a little "readme" file, or other form of guide, that will 
 \newline
 
 \textbf{Distribute weight}:
-The program must be able to distribute weight of items evenly in each individual suitcase and if needed spread out in multiple suitcases.
+The program must be able to distribute weight of items between multiple suitcases if there are more than one suitcase.
 \newline
 
 \textbf{Distribute space}:
@@ -49,10 +49,6 @@ When the user asks the program if an item will fit in the suitcase, the program 
 To make it easier for the user to know what will be packed an editable lists will be included depending on the type of trip.
 \newline
 
-\textbf{Number of people}
-Usually a trip is done with more then one person, so more suitcases might be available to distribute items between.
-\newline
-
 \subsection{Optional Features}
 These features as mentioned above, are additional features that might be able to be implemented later if possible.\newline
 
@@ -62,8 +58,4 @@ The program will also take in account that items might be bendable, and therefor
 
 \textbf{Type of trip}
 Depending on the nature of the trip different packing lists will be necessary because each trip might require different items.
-\newline
-
-\textbf{Account for the trips length}:
-If a long trip is planned, the program can take in account that the user might need more space for souvenirs, so the user do not need to check on the trip if there is room and weight for every souvenirs in the luggage and decide if the souvenir can come in the luggage without exceed the weight limit.
 \newline
