--- a/trunk/LaTeX/Statuseminar - NIX PILLE/indhold/design/programplanning.tex
+++ b/trunk/LaTeX/Statuseminar - NIX PILLE/indhold/design/programplanning.tex
@@ -9,10 +9,10 @@ If the user chooses to use a pre made settings the program will fetched the list
 
 The program then preforms the algorithms to place the items in the most efficient way regarding volume and weight. The program will also check that the bags does not exceed the weight and volume limits when travelling by flight.
 When the program successfully place an item, the item will be marked as packed. If the program can not fit the item in any of the accessible bags the item will be marked as not packable. If the program reach the point where all items have gone through the process, it should then inform the user that the process is done and inform how the user have to pack the bags and report if there were any items that could not be packed.
-At the end of the program the user can choose to add more items, see the exiting item, see the order of packing and close the program.
+At the end of the program the user can choose to add more items, see the existing item, see the order of packing and close the program.
 
 \figur{0.9}{flowchart.JPG}{This is the flowchart of the program (not quiet finished yet)}{fig:flow}
 
-Thereby the general structure of the program have been formed and can be describe by a flowchart, see on figure: \ref{fig:flow}.
+Thereby the general structure of the program have been formed and can be describe by a flowchart, seen on figure: \ref{fig:flow}.
 The arrows shows the direction of the flow in the program. Some of the arrows also have small labels indicating what answer there were to the decision.
 This flowchart can then be used as a schematic for the developing of the program and thereby a better structure of the program can be archived.
