--- a/trunk/LaTeX/Statuseminar - NIX PILLE/indhold/problem/method.tex
+++ b/trunk/LaTeX/Statuseminar - NIX PILLE/indhold/problem/method.tex
@@ -5,7 +5,7 @@ The Aalborg PBL method also trains the students ability to work together in a pr
 The first stage of the project is the problem analysis in chapter \ref{chap:problem}, which purpose is to find and document that there is a problem to begin with. From the problem analysis a thesis statement is formed and is used to produce a list of product requirements.
 The requirements are then used to design and develop a product that should solve the problem stated in the thesis statement. The design will be describe in chapter \ref{chap:design}.
 The development will also have it own chapter were the program will be describe and how the different functions are made. This can be seen in chapter \ref{chap:development}.
-The program are then tested on the target group of the problem. The testing phase will be described in chapter \ref{chap:Testing}. The result of the testing will lead to improvements and a conclusion of the project. The conclusion will sum up the project and try to answer the thesis statement, the conclusion can be seen in chapter \ref{chap:conclusion}. This is the main course of the project, when using the Aalborg PBL model.
+The program are then tested on the target group of the problem. The testing phase will be described in chapter \ref{chap:testing}. The result of the testing will lead to improvements and a conclusion of the project. The conclusion will sum up the project and try to answer the thesis statement, the conclusion can be seen in chapter \ref{chap:conclusion}. This is the main course of the project, when using the Aalborg PBL model.
 This project form is used because it finds and document a problem and then through the work with the problem gives an estimated solution to the problem.\\
 
 To document the problem, a lot of information is needed. The information is found through different sources such as; books, article, websites, etc. When using information found through the internet or other sources it is important to evaluate the used sources.
