--- a/trunk/LaTeX/Statuseminar - NIX PILLE/indhold/problem/solutiononthemarked.tex
+++ b/trunk/LaTeX/Statuseminar - NIX PILLE/indhold/problem/solutiononthemarked.tex
@@ -1,8 +1,8 @@
 \section{Solutions on the market}
 \label{sec:Solution}
-This chapter are used to research the marked and thereby get a image of what solutions there already exits on the marked. Through the research it is also possible to determine, how the exiting solution helps the user with the stated problem. By looking at existing solutions it can used to determine what features that would needed in an more problem oriented solution.
-The amount of lists and guides on the market is huge. These lists and guides offers help and provide tips for packing for travelling. Some of these lists and guides have been developed into applications that are available for the customer to use.
-An application or in short app, is a program that fulfil different kind of services for the user. Apps are used in the web browser, computer, smart phone, and tablets. The term app is general mentioned in context to smart phones and tablets.
+This chapter are used to research the marked and thereby get a image of what solutions there already exist on the marked. Through the research it is also possible to determine, how the existing solution helps the user with the stated problem. By looking at existing solutions it can used to determine what features that would be needed in the program for this project, and from these solutions get inspiration.
+The amount of lists and guides on the market is huge. These lists and guides offers help and provide tips for packing for traveling. Some of these lists and guides have been developed into applications that are available for the customer to use.
+An application or in short app, is a program that fulfill different kind of services for the user. Apps are used in the web browser, computer, smart phone, and tablets. The term app is general mentioned in context to smart phones and tablets.
 
 There also exists programs, that have integrated algorithms to handle optimization of the packing, on the marked that can be used.
 First a look into these lists and guides and the more advance solution thereafter.
@@ -31,7 +31,7 @@ Checkmark Packlist offers different templates for check lists that the customer 
 On figure: \ref{fig:checkmark} there can be seen an example of the product and how Pheckmark Packlist looks like for the user.
 Checkmark Packlist does not provide customization tool that let the customer add more categories to the check list. This is only a featured provided in the paid version of Checkmark Packlist \citep{checkpacklist}.
 
-This app does not provide a solid solution to the found problem but helps the user remembering what there should be packed for trip. This check list feature give a guiding effect and this is a useful feature and can be used in the product design to solve the state problem. A feature to consider is the mobility by designing the program for hand held devices.
+This app does not provide a solid solution for luggage packing but helps the user remembering what there should be packed for trip. This check list feature give a guiding effect and this is a useful feature and can be used in the product design to solve the problem. A feature to consider is the mobility by designing the program for hand held devices.
 
 \subsection{Online check/tip list}
 
@@ -41,7 +41,7 @@ An example of this kind of website is the following source \citep{onlinecheck}. 
 The site does not help with the actual packing, instead it helps with the planing of materials that the user might want to have on the trip.
 The website is designed with a menu left that let the user navigate through the different content of the website.
 
-The online check/tip list in itself does not give the customer a solution to the packing problem. The websites instead help the customer planing the trip and thereby no the actual problem. The type of check/tip list used on \citep{onlinecheck} does not apply as a useful feature that could be used in the final program. Instead it would more be focus on helping the user with the packing.
+The online check/tip list in itself does not give the customer a solution to the packing problem. The websites instead help the customer planing the trip. The type of check/tip list used on \citep{onlinecheck} does not apply as a useful feature that could be used in the final program. Instead it would more be focus on helping the user with the packing.
 
 \subsection{The e-Commerce shipping calculator}
 
@@ -52,7 +52,7 @@ The demo is design to have the containers dimension variables and weight limit a
 \figur{0.6}{shippingcalculator.JPG}{Screen shot of the program running taken from \citep{solvingmaze}}{fig:calculator}
 
 The customer have to type all known data in and press "Calculate Rates" and the program will then form a 3d model, this can be seen on figure: \ref{fig:calculator}.
-This product have a number of useful features that can be used in the final product. This solution can take items dimensions and weight and calculate the most optimal placement in the container. This can be related to packing your luggage for a trip. So a feature to have in the final product is to  calculate somewhat most effective way to pack the users luggage. Another useful feature is that this solution also shows it to the user. So the final product most inform the user in similar or another way how the luggage should be pack.
+This product have a number of useful features that can be used in the final product. This solution can take items dimensions and weight and calculate the most optimal placement in the container. This can be related to packing your luggage for a trip.
 
 \subsection{Recapitulation}
 
@@ -71,16 +71,15 @@ Guide the user* & & x & x & x & x   \\ \hline
 Distribute weight &  &   &   &   & x    \\ \hline
 Distribute space  &  &   &   &   & x    \\ \hline
 On the road   &  &  x  &  x  &   &  x  \\ \hline
-Baggage rules  &  &    &    &   &   \\ \hline
 Where in the suitcase  &  &   &   &   &  x   \\ \hline
 Packing list &  & x & x &   & x    \\ \hline
 
 \end{tabular}
 \end{center}
-\caption{ Table for the different products on the market compared to features
-*The program should be able to guide the user through the different steps of the program}
+\caption{ Table for the different products on the market and their features.
+*The program should be able to guide the user through the different steps of the program.}
 \label{tab:OtherPrograms}
 \end{table}
 
-Table \ref{tab:OtherPrograms} consists of features down the y-akse and exiting solution on the market out the x-akse. The crosses indicates when the particular product have the particular feature. The purpose of the table is to give a overview of the products compared to features that was found essential to the problem.
-Table \ref{tab:OtherPrograms} shows that none of the exiting solution does not take rules regarding baggage. It also shows that there are a lot of help regarding what to bring but when it comes to packing it is only one of the selected solution that had this feature.
+Table \ref{tab:OtherPrograms} consists of features listed vertical and existing solution on the market listed horizontal. The crosses indicates when the particular product have the particular feature. The purpose of the table is to give a overview of the products and their features that was found essential to the problem.
+Table \ref{tab:OtherPrograms} shows tha there are a lot of help regarding what to bring but when it comes to packing it is only one of the selected solution that had this feature.
