--- a/trunk/LaTeX/Rapport - NIX PILLE/Rapport.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/Rapport.tex
@@ -35,32 +35,48 @@
 
 %%%% Rapportindhold %%%%
 \chapter{Introduction} 
-%mangler
+\input{formalia/intro.tex}
 
 \chapter{Problem Analysis}
+\label{chap:problem}
+\input{indhold/problem/problemintro.tex}
+\input{indhold/problem/problem.tex}
+\input{indhold/problem/LuggageRules.tex}
+\input{indhold/problem/LuggageAllowance.tex}
+\input{indhold/problem/solutiononthemarked.tex}
+\input{indhold/problem/thesisstatement.tex}
+\input{indhold/problem/method.tex}
+
 
 \chapter{Theory}
-
+\label{chap:theory}
+\input{indhold/theory/Introductiontheory.tex}
+\input{indhold/theory/Knapsackproblem.tex}
+\input{indhold/theory/BinPackingProblem.tex}
 
 \chapter{Design}
-
+\label{chap:design}
+\input{indhold/design/Introductiondesign.tex}
+\input{indhold/design/Specificationrequirement.tex}
+\input{indhold/design/Solutionsuggestions.tex}
+\input{indhold/design/programplanning.tex}
 
 \chapter{Development}
+\label{chap:development}
 
 
 \chapter{Testing} 
-
+\label{chap:testing}
 
 \chapter{Discussion}
-
-
+\label{chap:Discussion}
 %conclusion mangler
 
 %%%% Kilder %%%%
 
 \begingroup
 	\raggedright
-	\bibliography{../BibTex/sources}	% Litteraturlisten
+	\bibliography{BibTeX/sources}	% Litteraturlisten
 \endgroup
 
 %%%% Fixme-listen %%%%
@@ -69,19 +85,20 @@
 %\listoffixmes	% Fixme-listen - fjernes til sidst i projektet med "%"
 
 \clearforchapter
+
 \appendix	% Appendiks/bilag start - giver chapter bogstaver i stedet for tal
 
-\aliaspagestyle{chapter}{empty}	 % Fjernelse af nummerering på bilagenes chaptersider
-\pagestyle{empty}	%	Fjernelse af nummerering i bilag
 \addtocontents{toc}{\protect\cftpagenumbersoff{chapter}} % Fjernelse af nummerering af bilag i TOC
 
 %\settocdepth{chapter}	% Sætter dybden af indholdsfortegnelsen til chapter for bilagene
 
 
 %%%% Appendiks %%%%
+\input{appendix/GroupContract.tex}
+\input{appendix/mindmap.tex}
 
 %%%% Bilag %%%%
 
-\end{document}																								% Slutter dokumentet - obligatorisk
+\end{document}
 
 
