--- a/trunk/LaTeX/Rapport - NIX PILLE/indhold/problem/problem.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/indhold/problem/problem.tex
@@ -9,7 +9,7 @@ The amount of items to bring also depends on what kind of trip it is and the pur
 
 The amount of luggage depends on the amount of people on the trip, because everyone needs their own personal items, and their own clothes. This can be a problem if the persons have a lot of shared items that has to be spread in different suitcases and need to be found afterwards and it might also effect the total weight of the luggage.\\
 
-It can be frustrating, when traveling with many and/or heavy suitcases, if you need to carry the luggage far. It can also be hard to maneuver if where you are suppose to walk is a small space or a narrow passage or if simply filled with a lot of people constantly blocking your way.\\
+It can be frustrating, when traveling with many and/or heavy suitcases, if you need to carry the luggage far. It can also be hard to maneuvre if where you are suppose to walk is a small space or a narrow passage or if simply filled with a lot of people constantly blocking your way.\\
  
 There can also be a problem with too large or heavy suitcases if you are traveling by plane since this can result in a fee. The size of the fee varies from airline to airline and can be found on the airlines website e.g.  \citep{altombag}. One of the reasons that this fee has been introduced is so the airlines bag-handlers do not risk getting injuries by carrying too many, heavy suitcases.\\ 
 To avoid this fee it can be an advantage to pack the suitcases properly and limit the choice of items to bring so the total weight does not exceed the allowed weight.\\
@@ -51,7 +51,7 @@ With this in the mind, it is important to make room for possible souvenirs or ot
 These souvenirs can be a problem to bring home. As earlier mentioned the weight and size of the luggage is a problem before the departure, therefore it will normally also be a problem on the trip home.
 This means that if a family packs just to the limits and then buy things and souvenirs on their vacation they will get into trouble when packing the luggage for the trip home.
 
-\subsubsection{Packing as an family}
+\subsubsection{Packing as a family}
 When traveling as a family it is an option to pack clothing, accessories and other relevant item in a more effective way. This is done by using all the bags in the most effective way and thereby not take the ownership of the bags into consideration. This method means that the bags will not be sectioned but the packed item will be packed into different bags despite the ownership of the item to active the most effective way of packing. Original bags tends to be packed so the bags are sectioned by the owner of the items so it is easier to find the desired item. This method is mostly used because it makes it much easier to known were to find the desired item. When this method of packing is used, it will be more effectively packed, but it have to be kept in mind that the weight should be distributed evenly, so none of the luggages are too heavily packed compared to an other.
 
 \subsubsection{Round Up}
